tests/substructural/check/copy_in_call_arg_of_non_copy.err.expected
error: at 6:13: [SUB-CopyOfNonCopy] In function 'f', block 'entry': cannot copy non-Copy type Linear
   |
 6 |             call take(copy x);
   |             ^^^^^^^^^^^^^^^^^
  hint: since the type is not Copy, try moving it instead using 'move'
